--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,5 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: pm2 delete app
+    - run: cd /home/ubuntu/apps/github-actions-demo/
     - run: pm2 start app.js
